--- a/artists/aristodemos.html
+++ b/artists/aristodemos.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>HE - Aristodemos</title>
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="icon" href="images/he.png">
+	<link rel="stylesheet" href="http://homewards.github.io/css/main.css/">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
 <style>
