--- a/artists/aportrait.html
+++ b/artists/aportrait.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HE - aportrait</title>
-	<link rel="stylesheet" href="http://homewards.github.io/css/main.css/">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
