--- a/artists/aristodemos.html
+++ b/artists/aristodemos.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>HE - Aristodemos</title>
-	<link rel="stylesheet" href="http://homewards.github.io/css/main.css/">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
@@ -22,7 +22,7 @@
 
 			<div style="max-height: 600px;" class="col-3">
 			<img src="images/hew.png" class="logo">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>Aristodemos</h1>
 			<h1>Cyprus</h1>
@@ -42,7 +42,7 @@
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
-				<img src="images/artists/ari2.jpg" class="slide2">
+				<img src="http://homewards.github.io/artists/img/ari2.jpg" class="slide2">
 			</div>
 		</div>
 	</div>
