--- a/artists/aristodemos.html
+++ b/artists/aristodemos.html
@@ -21,7 +21,7 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>Aristodemos</h1>
