--- a/artists/pan.html
+++ b/artists/pan.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>HE - pan</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="icon" href="images/he.png">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
 <style>
@@ -21,8 +21,8 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="images/hew.png" class="logo">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>pan</h1>
 			<h1>Cyprus</h1>
@@ -53,7 +53,7 @@
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
-				<img src="images/artists/pan.jpg" class="slide2">
+				<img src="http://homewards.github.io/artists/img/pan.jpg" class="slide2">
 			</div>
 		</div>
 	</div>
