--- a/artists/rawsilver.html
+++ b/artists/rawsilver.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>HE - RAW SILVER</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="icon" href="images/he.png">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 
 <style>
@@ -21,8 +21,8 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="images/hew.png" class="logo">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>RAW SILVER</h1>
 			<h1>Cyprus</h1>
