--- a/events/discosucks.html
+++ b/events/discosucks.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>HE - The Gathering</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 	<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 <style>
 * {
@@ -19,7 +20,7 @@
 
 		<div style="max-height: 600px;" class="col-2" id="sidebar">
 			
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<br>
 			<br>
@@ -49,12 +50,12 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="images/discosucks/poster.jpg" width="100%">
+			<img src="http://homewards.github.io/events/discosucks/img/poster.jpg" width="100%">
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
-			<img src="images/discosucks/1.jpg" width="100%">
-			<img src="images/discosucks/2.jpg" class="slide">
+			<img src="http://homewards.github.io/events/discosucks/img/1.jpg" width="100%">
+			<img src="http://homewards.github.io/events/discosucks/img/2.jpg" class="slide">
         </div>
 
 		</div>
