--- a/events/launch.html
+++ b/events/launch.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>HE - Record Label Launch</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 	<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 <style>
 
@@ -16,7 +17,7 @@
 
 		<div style="max-height: 600px;" class="col-2" id="sidebar">
 			<img src="images/he.png" class="logo">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<br>
 			<br>
@@ -43,9 +44,9 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="images/launch/1.jpg" class="slide">
-<img src="images/launch/poster.jpg" width="100%">
-			<img src="images/launch/2.png" class="slide">
+			<img src="http://homewards.github.io/events/launch/img/launch/1.jpg" class="slide">
+<img src="http://homewards.github.io/events/launch/img/launch/1.jpgposter.jpg" width="100%">
+			<img src="http://homewards.github.io/events/launch/img/launch/1.jpg/2.png" class="slide">
 
         </div>
 		
