--- a/events/gathering.html
+++ b/events/gathering.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>HE - The Gathering</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="icon" href="images/he.png">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 	<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 <style>
 * {
@@ -19,7 +19,7 @@
 		<div class="row">
 
 		<div style="max-height: 600px;" class="col-2" id="sidebar">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<h1>The Gathering</h1>
 
 <p> 8&9 of July, 2016
@@ -69,13 +69,13 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="images/gathering/1.gif" class="slide">
-			<img src="images/gathering/3.gif" class="slide">
+			<img src="http://homewards.github.io/events/gathering/img/1.gif" class="slide">
+			<img src="http://homewards.github.io/events/gathering/img/3.gif" class="slide">
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
-			<img src="images/gathering/2.gif" class="slide">
-			<img src="images/gathering/4.gif" class="slide">
+			<img src="http://homewards.github.io/events/gathering/img/2.gif" class="slide">
+			<img src="http://homewards.github.io/events/gathering/img/4.gif" class="slide">
         </div>
 
 		</div>
