--- a/events/launch.html
+++ b/events/launch.html
@@ -44,9 +44,9 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="http://homewards.github.io/events/launch/img/launch/1.jpg" class="slide">
-<img src="http://homewards.github.io/events/launch/img/launch/1.jpgposter.jpg" width="100%">
-			<img src="http://homewards.github.io/events/launch/img/launch/1.jpg/2.png" class="slide">
+			<img src="http://homewards.github.io/events/img/launch/1.jpg" class="slide">
+<img src="http://homewards.github.io/events/img/launch/poster.jpg" width="100%">
+			<img src="http://homewards.github.io/events/img/launch/2.png" class="slide">
 
         </div>
 		
