--- a/events/launch.html
+++ b/events/launch.html
@@ -16,7 +16,7 @@
 		<div class="row">
 
 		<div style="max-height: 600px;" class="col-2" id="sidebar">
-			<img src="images/he.png" class="logo">
+			<img src="http://homewards.github.io/images/he.png" class="logo">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<br>
