--- a/releases/sixelementsoffiction.html
+++ b/releases/sixelementsoffiction.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Honest Electronics</title>
-	<link rel="stylesheet" href="users/nicos/desktop/website mockups/homewards.github/css/main.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +14,7 @@
 
 			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
-			<h1><a href="honest.html" target="_self">Back</a></h1>
+			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<br>
 			<br>
@@ -25,13 +26,13 @@
 			</div>
 
 			<div style="height:100%" class="col-5 end" position: relative; left: 0; top: 0;>
-				<img src="images/dis666-back.jpg"  class="back">
-				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="images/fic-sb9.png" class="sb9"></a>
+				<img src="http://homewards.github.io/images/dis666-back.jpg"  class="back">
+				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="http://homewards.github.io/images/fic-sb9.png" class="sb9"></a>
 				<a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character" target="_blank"><img src="images/fic-nico.png" class="nico"></a>
-				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="images/fic-bd.png" class="bd"></a>
-				<img src="images/fic-cu.png" class="cu" id="undone">
-				<img src="images/fic-ar.png" class="ar" id="undone">
-				<img src="images/fic-bu.png" class="bu" id="undone">
+				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="http://homewards.github.io/images/fic-bd.png" class="bd"></a>
+				<img src="http://homewards.github.io/images/fic-cu.png" class="cu" id="undone">
+				<img src="http://homewards.github.io/images/fic-ar.png" class="ar" id="undone">
+				<img src="http://homewards.github.io/images/fic-bu.png" class="bu" id="undone">
 			</div>
 <div "height:100%" class="col-3" id="rightbar">
 
