--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
 			<h1>Honest Electronics</h1>
-			<p>Compact, dynamic and useful actions <br>for the dance scene of Cyprus.</p>
+			<p>An action to highlight the importance of local networking whilst simultaneously attempting to connect with an international network.</p>
 			<h1><a href="contact.html" target="_self">Contact</a></h1>
 			<h1><a href="about.html" target="_self">About</a></h1>
 			<h1><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h1>
