--- a/artists/sb9.html
+++ b/artists/sb9.html
@@ -26,7 +26,7 @@
 			<br>
 			<h1>SB-9</h1>
 			<h1>Cyprus</h1>
-			<p>A daughter of an audiophile, born in Cyprus in 1990. Weronika reflects that growing up in the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and sometimes unexpected floating percussions. Also as Mohama Tajalof, while mixing a variety of complex sounds under the roof of experimental, trying to create the feeling of longevity. Always serves deep.</p>
+			<p>A daughter of an audiophile, born in Cyprus in 1990. Veronika reflects that growing up in the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and sometimes unexpected floating percussions. Also as Mohama Tajalof, while mixing a variety of complex sounds under the roof of experimental, trying to create the feeling of longevity. Always serves deep.</p>
 			<br>
 			<p>DJ</p>
 			<br>
