--- a/artists/rawsilver.html
+++ b/artists/rawsilver.html
@@ -32,10 +32,10 @@ Footage in Denmark. He is one of the two core member as well as the designer of 
 			<p>Producer</p>
 			<h1><a href="https://soundcloud.com/ppueblo" target="_blank">Soundcloud</a></h1>
 			<br>
-			<iframe width="80%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/279498693&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+			
 			</div>
 
-			<div style="max-height: 600px" class="col-3" id="images">
+			<div style="height: 600px" class="col-3" id="square">
 			<iframe width="80%" height="270" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305161155&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			<br>
 			<iframe width="80%" height="270" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/275020515&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
