--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<div style="height:100%"  class="col-3" overflow="scroll">
 			<img src="images/he.png" class="logo" id="animation-target">
 			<h1>Honest Electronics</h1>
-			<p>An action to highlight the importance of local networking <br> whilst simultaneously attempting to connect with an international network.</p>
+			<p>Do—It—Together Collective <br>& Record Label from Cyprus.
+			<p>An action to highlight the importance of local<br> networking whilst simultaneously attempting <br>to connect with an international network.</p>
 			<h1><a href="contact.html" target="_self">Contact</a></h1>
 			<h1><a href="about.html" target="_self">About</a></h1>
 			<h1><a href="https://honestelectronics.bandcamp.com/merch" target="_blank">Shop</a></h1>
@@ -37,15 +38,14 @@
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
 				<a href="artists/cusack.html" target="_self">Cusack</a><br>
+				<a href="artists/mm.html" target="_self">Emmidio Vasquez</a><br>
 				<a href="artists/elektroniki.html" target="_self">elektroniki</a><br>
 				<a href="artists/georges.html" target="_self">Georges D'Andre</a><br>
-				<a href="artists/mm.html" target="_self">Mm</a><br>
 				<a href="artists/pan.html" target="_self">pan</a><br>
 				<a href="artists/ppueblo.html" target="_self"> ppueblo </a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
-				<a href="artists/yeliades.html" target="_self">Yiannis Eliades</a><br>
             </p>
 			
 
