index coloring change

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>Honest Electronics</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="images/he.png">
-<link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
+
 </head>
+
 <body>
 	<div class="grid">
 
@@ -41,6 +43,7 @@
 				<a href="artists/mm.html" target="_self">Emmidio Vasquez</a><br>
 				<a href="artists/elektroniki.html" target="_self">elektroniki</a><br>
 				<a href="artists/georges.html" target="_self">Georges D'Andre</a><br>
+				<a href="artists/mm.html" target="_self">Hades Militia</a><br>
 				<a href="artists/pan.html" target="_self">pan</a><br>
 				<a href="artists/ppueblo.html" target="_self"> ppueblo </a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
