--- a/events/discosucks.html
+++ b/events/discosucks.html
@@ -51,11 +51,12 @@
 
 		<div style="max-height: 600px" class="col-5">
 			<img src="http://homewards.github.io/events/img/discosucks/poster.jpg" width="100%">
+			<img src="http://homewards.github.io/events/img/discosucks/2.jpg" width="100%">
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
-			<img src="http://homewards.github.io/events/img/discosucks/1.jpg" width="100%">
-			<img src="http://homewards.github.io/events/img/discosucks/2.jpg" class="slide">
+			<img src="http://homewards.github.io/events/img/discosucks/3.jpg" width="100%">
+			<img src="http://homewards.github.io/events/img/discosucks/1.jpg" class="slide"><img src="http://homewards.github.io/events/img/discosucks/4.jpg" class="slide">
         </div>
 
 		</div>
