--- a/events/discosucks.html
+++ b/events/discosucks.html
@@ -55,10 +55,10 @@
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
-			<img src="http://homewards.github.io/events/img/discosucks/3.jpg" width="100%">
-			<img src="http://homewards.github.io/events/img/discosucks/1.jpg" width="100%" max-height="100px" border-style="solid" border-color="white">
-			<img src="http://homewards.github.io/events/img/discosucks/4.jpg" class="slide">
-			<img src="http://homewards.github.io/events/img/discosucks/2.jpg" width="100%">
+			<img src="http://homewards.github.io/events/img/discosucks/3.jpg" class="sideimg">
+			<img src="http://homewards.github.io/events/img/discosucks/1.jpg" class="sideimg">
+			<img src="http://homewards.github.io/events/img/discosucks/4.jpg" class="sideimg">
+			<img src="http://homewards.github.io/events/img/discosucks/2.jpg" class="sideimg">
         </div>
 
 		</div>
