artists pages updates

--- a/artists/billyd.html
+++ b/artists/billyd.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - BillyD</title>
+	<title>HE - Aristodemos</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -21,27 +21,40 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>BillyD</h1>
+			<h1>Producer / DJ / Audio Engineer </h1>
 			<h1>Cyprus</h1>
-			<p>Aristodemos is the man behind countless under the radar gatherings, a vital organ in the local scene. He is a collector, an endless source of good vibes dance music and a creator, being founding member of Exotica Music Events, Essoterica and core member of Honest Electronics.</p>
-			<p>DJ/Producer</p>
 			<br>
-			<h1><a href="https://soundcloud.com/biily" target="_blank">Soundcloud</a></h1>
-			<br>
-	<iframe width="90%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308574185&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-			<br>
-			<br>
-			<br>
-			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
-				<iframe width="90%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/239061179&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+            <p>Pantelis Drousiotis was born in 1992 in Nicosia Cyprus. His first interest in music, begun in the early teenage years of his life by starting drums’ lessons and perform with various bands at rock and alternative concerts. Shortly he met Techno, and since then the name BillyD was devoted to his DJ and Producer career. Graduate from University of Wolverhampton as ‘Music Technology Specialist’ and he is back in Cyprus to follow his dream of becoming a respected DJ and Producer in the local and international Techno scene.</p>
+
+<p>Billy was the co-founder of the live-streaming channel ‘Weedo_It’ and ‘Honest Electronic’s’ sub-label ‘Dishonest Records’. With performances at many Clubs and Bars in Cyprus and UK, BillyD has established his own identity of music style, going from Deep to Minimal Techno and more rarely Dub and House Music.</p>
+
+<p>Labels: Honest Electronics / Dishonest Records / Green Kiwi Records / Karmak Records</p>
+ 
+<p>Mixing & Mastering & Streaming Serivices and Promos: pantelisdrousiotis@gmail.com</p>
+			<p><a href="https://soundcloud.com/biily" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/pdbillyd" target="_blank">Facebook</a></p>
+<br>
+<br>
 			</div>
 
+			<div style="height: 600px" class="col-3" >
+				<h1>Releases</h1>
+				<br>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/308574185&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
+			<br>
+
+						<br>
+			<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="img/dis01.jpg" class="midimg"></a>
+			<br>
+			<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="img/he01.jpg" class="midimg"></a>
+			</div>
+			
 			<div style="max-height: 600px" class="col-6">
-
+				<img src="img/billyd.jpg" class="sideimg">
+				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
