--- a/artists/rawsilver.html
+++ b/artists/rawsilver.html
@@ -21,27 +21,34 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>RAW SILVER</h1>
+			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
-			<p>Active as a self-taught electronic music producer, DJ, and graphic designer in Amsterdam. With this alias he has accomplished releases on various compilations of labels like Low Income $quad, Memory No.36 Records, SEAGRAVE and Speaker 
-Footage in Denmark. He is one of the two core member as well as the designer of Honest Electronics, XORKO, MJMJ Records and Brotherhood Nicosia.</p>
 			<br>
-			<p>Producer</p>
-			<h1><a href="https://soundcloud.com/ppueblo" target="_blank">Soundcloud</a></h1>
-			<br>
-			
+			<p>Reflective versatility, <br> celestial intentions, <br>challenge initiator, <br>community gardener.</p>
+<p>Nico Stephou is a self-taught producer and DJ since 2008, he has accomplished releases on various compilations of labels like Low Income $quad (Croatia), Memory No.36 Records (U.S.A.), SEAGRAVE (U.K.) and an album release on Speaker Footage (Denmark). He is one of the two core member as well as the designer of Honest Electronics (Cyprus), XORKO (2011-2013 CY) and MJMJ Records (U.S.A.)</p>
+			<p><a href="https://soundcloud.com/raw-silver" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/anothernicostephoualias/" target="_blank">Instagram</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/Raw-Silver-337862192977346/?pnref=lhc" target="_blank">Facebook</a></p>
+
 			</div>
 
-			<div style="height: 600px" class="col-3" id="square">
-			<iframe width="80%" height="270" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305161155&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+			<div style="height: 600px" class="col-3" >
+				<h1>Releases</h1>
+				<br>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/275020515&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/305161155&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/254466394&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
+
 			<br>
-			<iframe width="80%" height="270" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/275020515&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+			<br>
+			
+			<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="img/dis01.jpg" class="midimg"></a>
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
+				<img src="img/silver.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
