--- a/events/discosucks.html
+++ b/events/discosucks.html
@@ -50,15 +50,15 @@
 		</div>
 
 		<div style="max-height: 600px" class="col-5">
-			<img src="http://homewards.github.io/events/img/discosucks/poster.jpg" width="100%">
+			<img src="img/discosucks/poster.jpg" width="100%">
 			
         </div>
 		
 		<div style="max-height: 600px" class="col-5" id="images">
-			<img src="http://homewards.github.io/events/img/discosucks/4.jpg" class="sideimg">
-			<img src="http://homewards.github.io/events/img/discosucks/2.jpg" class="sideimg">
-			<img src="http://homewards.github.io/events/img/discosucks/3.jpg" class="sideimg">
-			<img src="http://homewards.github.io/events/img/discosucks/1.jpg" class="sideimg">
+			<img src="img/discosucks/4.jpg" class="sideimg">
+			<img src="img/discosucks/2.jpg" class="sideimg">
+			<img src="img/discosucks/3.jpg" class="sideimg">
+			<img src="img/discosucks/1.jpg" class="sideimg">
 
         </div>
 
