--- a/artists/aristodemos.html
+++ b/artists/aristodemos.html
@@ -21,28 +21,28 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>Aristodemos</h1>
+			<h1>DJ</h1>
 			<h1>Cyprus</h1>
-			<p>Aristodemos is the man behind countless under the radar gatherings, a vital organ in the local scene. He is a collector, an endless source of good vibes dance music and a creator, being founding member of Exotica Music Events, Essoterica and core member of Honest Electronics.</p>
 			<br>
-			<p>DJ/Producer</p>
-			<br>
-			<h1><a href="https://soundcloud.com/aristodemos" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<br>
-			<iframe width="90%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257267439&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-			<br>
-			<br>
+            <p>Aristodemos is the man behind countless under the radar gatherings, a vital organ in the local scene. He is a collector, an endless source of good vibes dance music and a creator, being founding member of Exotica Music Events, Essoterica and core member of Honest Electronics.</p>
+			<p><a href="https://soundcloud.com/aristodemos" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/Delta.Theta.Aristodemos/" target="_blank">Facebook</a></p>
+<br>
+<br>
 			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+
+			<div style="height: 600px" class="col-3" >
+				<h1>Releases</h1>
+				<br>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/257267439&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/ari2.jpg" class="slide2">
+				<img src="img/aristodemos.jpg" class="sideimg">
+				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
