--- a/artists/cusack.html
+++ b/artists/cusack.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Cusack</title>
+	<title>HE - Aristodemos</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -21,27 +21,26 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>Cusack</h1>
+			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
-			<p>Born in Cyprus, Tony Kattashis bought his first set of turntables in 1997, while living in London. Greatly affected by the UK underground he moved back to Cyprus 10 years later with a few thousand vinlys, a TR-808 and some vintage synths.  He has since secretly mastered his dance-floor sensibility both in the studio and behind the turntables, gaining reputation as one of the island's finest DJ’s.</p>
 			<br>
-			<p>DJ/Producer</p>
-			<br>
-			<h1><a href="https://soundcloud.com/aportrait" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+            <p>Born in Cyprus, Tony Kattashis bought his first set of turntables in 1997, while living in London. Greatly affected by the UK underground he moved back to Cyprus 10 years later with a few thousand vinlys, a TR-808 and some vintage synths.  He has since secretly mastered his dance-floor sensibility both in the studio and behind the turntables, gaining reputation as one of the island's finest DJ’s.</p>
+
+			<p><a href="https://soundcloud.com/biily" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/pdbillyd" target="_blank">Facebook</a></p>
+<br>
+<br>
 			</div>
 
+			<div style="height: 600px" class="col-3" >
+			</div>
+			
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/cusack.jpg" class="slide2">
+				<img src="img/cusack.jpg" class="sideimg">
+				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
