--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<br><a href="events/discosucks.html">Disco Sucks, NYE 2017</a></p>
 
 			<h1>Releases</h1>
-			<p><a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><br><a href="releases/sixelementsoffiction.html"> (6Fiction6) Mixtape Series</a><br><a href="releases/univocal.html">(HE02) aportrait</a><p>
+			<p><a href="https://honestelectronics.bandcamp.com/album/dishonest-01" target="_blank">(DIS01) BillyD/RAW SILVER (12")</a><br><a href="https://honestelectronics.bandcamp.com/album/motorik" target="_blank">(HE01) BillyD</a><p>
 
 			
 
@@ -42,10 +42,12 @@
 				<a href="artists/aristodemos.html" target="_self">Aristodemos</a><br>
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
 				<a href="artists/cusack.html" target="_self">Cusack</a><br>
-				<a href="artists/mm.html" target="_self">Emmidio Vasquez</a><br>
 				<a href="artists/elektroniki.html" target="_self">elektroniki</a><br>
+				<a href="artists/mm.html" target="_self">Emmidio Vasquez</a><br>
 				<a href="artists/georges.html" target="_self">Georges D'Andre</a><br>
-				<a href="artists/mm.html" target="_self">Hades Militia</a><br>
+				<a href="artists/hadesmilitia.html" target="_self">Hades Militia</a><br>
+				<a href="artists/shammas.html" target="_self">Michalis Shammas</a><br>
+				<a href="artists/oswaldo.html" target="_self">Oswaldo III</a><br>
 				<a href="artists/pan.html" target="_self">pan</a><br>
 				<a href="artists/ppueblo.html" target="_self"> ppueblo </a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
@@ -66,10 +68,11 @@
 				<img src="images/dis666-back.jpg"  class="back">
 				<a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot"target="_blank"><img src="images/fic-sb9.png" class="sb9"></a>
 				<a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character" target="_blank"><img src="images/fic-nico.png" class="nico"></a>
-				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="images/fic-bd.png" class="bd"></a>
+				<a href="https://soundcloud.com/honest-electronics/theme" target="_blank"><img src="images/fic-bd.png" class="bd" ></a>
+				
 				<img src="images/fic-cu.png" class="cu" id="undone">
 				<img src="images/fic-ar.png" class="ar" id="undone">
-				<img src="images/fic-bu.png" class="bu" id="undone">
+				<a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank"><img src="images/fic-bu.png" class="bu"></a>
 		</div>
 
         <div "height:100%" class="col-3" id="rightbar">
