--- a/artists/aportrait.html
+++ b/artists/aportrait.html
@@ -21,27 +21,34 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>aportrait</h1>
-			<h1>Turkey</h1>
-			<p>Aristodemos is the man behind countless under the radar gatherings, a vital organ in the local scene. He is a collector, an endless source of good vibes dance music and a creator, being founding member of Exotica Music Events, Essoterica and core member of Honest Electronics.</p>
+			<h1>Producer / DJ</h1>
+			<h1>Cyprus</h1>
 			<br>
-			<p>DJ/Producer</p>
-			<br>
-			<h1><a href="https://soundcloud.com/aportrait" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
+            <p>Aportrait is the abstract and experimental new project by Istanbul based artist and Memoire Affective label boss Arman Akıncı, who has been DJ’ing over a decade and has an ongoing radio show ‘’Armanqrtachure’’ at Radio Dinamo.</p>
+			<p><a href="https://soundcloud.com/aportrait" target="_blank">Soundcloud</a></p>
+<br>
+<br>
 			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+
+			<div style="height: 600px" class="col-3" >
+				<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+					<img src="img/aportrait.png" class="sideimg">
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/aportrait.jpg" class="slide">
+				<img src="img/aportrait.jpg" class="sideimg">
+
 			</div>
 		</div>
 	</div>
