--- a/artists/georges.html
+++ b/artists/georges.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Georges D'Andre</title>
+	<title>HE - Georges D'André</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -21,27 +21,26 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>Georges D'Andre</h1>
+			<h1>Cusack</h1>
+			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
-			<p>falling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
 			<br>
-			<p>DJ</p>
-			<br>
-			<h1><a href="https://soundcloud.com/elektroniki" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+            <p>Georges’ relationship with music has always been exceptional. As a devoted collector of records, with an appetite for emerging styles and obscure artists, his migration to the decks was just a matter of time. Having cut his teeth in the local house party scene, he has finally made his anticipated debut with tunes ranging from new and old House, Deep House and Disco.</p>
+
+			<p><a href="https://soundcloud.com/georges-dandre" target="_blank">Soundcloud</a></p>
+<br>
+<br>
 			</div>
 
+			<div style="height: 600px" class="col-3" >
+			</div>
+			
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/georges.jpg" class="slide2">
+				<img src="img/georges.jpg" class="sideimg">
+				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
