--- a/artists/mm.html
+++ b/artists/mm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Mm</title>
+	<title>HE - Emiddio Vasquez</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -21,30 +21,27 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>Mm</h1>
+			<h1>Emiddio Vasquez</h1>
+			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
-			<p>falling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
 			<br>
-			<p>DJ/Producer</p>
-			<h1><a href="https://soundcloud.com/oswaldo-iii" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<iframe width="300" height="200" src="https://www.youtube.com/embed/RizskM9AyRI?list=PLFwMUknVCG7Fq1JcH__QIbImjwnU8X9tP" frameborder="0" allowfullscreen></iframe>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+            <p>Born in Dominican Republic and raised Cyprus, Emiddio Vasquez works with sound on both the stage and in gallery spaces using extended techniques (guitar), modular synthesizer, turntables, field recordings, reel-to-reel and digital processes.</p>
 
+			<p><a href="https://soundcloud.com/emiddiovasquez" target="_blank">Soundcloud</a></p>
+			<p>Other Aliases;&nbsp&nbsp<a href="oswaldo.html">Oswaldo III</a></p>
+<br>
+<br>
 			</div>
 
+			<div style="height: 600px" class="col-3" >
+			</div>
+			
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/mm.jpg" class="slide2">
+				<img src="img/emiddio.jpg" class="sideimg">
+			
 			</div>
 		</div>
 	</div>
