--- a/artists/oswaldo.html
+++ b/artists/oswaldo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - pan</title>
+	<title>HE - Oswaldo III</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -24,26 +24,24 @@
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>pan</h1>
-			<h1>Producer / Photographer</h1>
+			<h1>Oswaldo III</h1>
+			<h1>Producer</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>pan is  the sobriquet of multi-culture/platform artist Panagiotis. He works with visual and or acoustical elements to create distinct objects and texts that frequently cross the lines between parody / reality / auteurship / art / pop. As a musician he performs using a selection of electronic modular sythesizers, drum machines and haptic instruments, guitars, drums and microphones which metamorphose constantly as his sets are often based on autoschediasm. </p>
+            <p>"...contemplation is not techno-aesthetics’ primary category. It’s in usage, in action, that it becomes something orgasmic, a tactile means and motor of stimulation. When a nut that is stuck becomes unstuck, one experiences a motoric pleasure, a certain instrumentalized joy, a communication--mediated by the tool--with the thing on which the tool is working. [...] It’s a type of intuition that’s perceptive-motoric and sensorial. The body of the operator gives and receives. Even a machine like the lathe or the milling machine produces this particular sensation. There exists an entire sensorial array of tools of all kinds."</p>
 
-			<p><a href="https://www.instagram.com/therealpannybrown/" target="_blank">Instagram</a></p>
+			<p><a href="https://soundcloud.com/oswaldo-iii" target="_blank">Soundcloud</a></p>
+			<p>Other Aliases;&nbsp&nbsp<a href="mm.html">Emiddio Vasquez</a></p>
 <br>
 <br>
 			</div>
 
 			<div style="height: 600px" class="col-3" >
-								<iframe width="100%" src="https://www.youtube.com/embed/FjltqsBsyBI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				<iframe width="100%" src="https://www.youtube.com/embed/UxYKyATKQtI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+				
 			</div>
 			
 			<div style="max-height: 600px" class="col-6">
-				<img src="img/pan.jpg" class="sideimg">
-			
+								<img src="img/oswaldo.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
