--- a/artists/sb9.html
+++ b/artists/sb9.html
@@ -21,26 +21,27 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>SB-9</h1>
+			<h1>DJ</h1>
 			<h1>Cyprus</h1>
-			<p>A daughter of an audiophile, born in Cyprus in 1990. Veronika reflects that growing up in the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and sometimes unexpected floating percussions. Also as Mohama Tajalof, while mixing a variety of complex sounds under the roof of experimental, trying to create the feeling of longevity. Always serves deep.</p>
 			<br>
-			<p>DJ</p>
-			<br>
-			<h1><a href="https://soundcloud.com/sbnine" target="_blank">Soundcloud</a></h1>
-			<br>
-			<iframe width="80%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259585238&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+			<p>RA daughter of an audiophile, born in Nicosia, Cyprus in 1990. Veronika proves on every occasion that growing up on the island has influenced her music deeply. Having an affair for long form and slowly unfolding gameplay in both minimal techno and house, her sound palette is remarkably clear and delicate, with diving sine tones and occasional unexpected floating percussions. Sometimes as Mohama Tajalof - mixing a variety of complex sounds - under the roof of experimental. Always trying to serve deep.</p>
+			<p><a href="https://soundcloud.com/sbnine" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/moharmy/" target="_blank">Instagram</a></p>
 
 			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
-				<iframe width="80%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306864868&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
+			<div style="height: 600px" class="col-3" >
+				<h1>Releases</h1>
+				<br>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/306864868&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
+			<iframe width="100%" height="20" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259585238&amp;color=000000&amp;inverse=true&amp;auto_play=false&amp;show_user=true"></iframe>
 			</div>
 
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/sb9.jpg" class="slide2">
+				<img src="img/sb9.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
