--- a/artists/yeliades.html
+++ b/artists/yeliades.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Yiannis Eliades</title>
+	<title>HE - isel</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -21,24 +21,27 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>Yiannis Eliades</h1>
+			<h1>isel</h1>
+			<h1>Producer</h1>
 			<h1>Cyprus</h1>
-			<p>spivak used to make music on the piano. Now she makes music on the computer.</p>
 			<br>
-			<p>Producer</p>
-			<h1><a href="https://soundcloud.com/yiannisel" target="_blank">Soundcloud</a></h1>
-			<br>
+			<p>Yiannis enjoys walking around with a recorder. He then likes to retire back to his cave and search for timbral variations from those everyday sounds.
+At some point he tries to convince his resident machinery to converse with these textures and eventually tries to capture those intense literary and musical moments.<br><br>
+He is enchanted by how electronic music, the music of manipulation, enables variation and change away from established notions of form and structure. A gauze of impure thinking, enabling you to disconnect from yourself and achieve creativity by going beyond yourself.
+<br><br>In exchange for the above, he grudgingly came to terms with the fact that tangled wires are part of his daily life.
+</p>
+			<p><a href="https://soundcloud.com/yiannisel" target="_blank">Soundcloud</a></p>
+
 			</div>
 
-			<div style="max-height: 600px" class="col-3" id="images">
-			<iframe width="80%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/301531522&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-			<br>
-</div>
+			<div style="height: 600px" class="col-3" >
+			</div>
+
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/yiannisel.jpg" class="slide">
+				<img src="img/yiannisel.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
