--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 				<a href="artists/billyd.html" target="_self">BillyD</a><br>
 				<a href="artists/cusack.html" target="_self">Cusack</a><br>
 				<a href="artists/elektroniki.html" target="_self">elektroniki</a><br>
-				<a href="artists/mm.html" target="_self">Emmidio Vasquez</a><br>
-				<a href="artists/georges.html" target="_self">Georges D'Andre</a><br>
+				<a href="artists/mm.html" target="_self">Emiddio Vasquez</a><br>
+				<a href="artists/georges.html" target="_self">Georges D'André</a><br>
 				<a href="artists/hadesmilitia.html" target="_self">Hades Militia</a><br>
+				<a href="artists/yeliades.html" target="_self">isel</a><br>
 				<a href="artists/shammas.html" target="_self">Michalis Shammas</a><br>
 				<a href="artists/oswaldo.html" target="_self">Oswaldo III</a><br>
 				<a href="artists/pan.html" target="_self">pan</a><br>
-				<a href="artists/ppueblo.html" target="_self"> ppueblo </a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
 				<a href="artists/sb9.html" target="_self">SB-9</a><br>
 				<a href="artists/spivak.html" target="_self">Spivak</a><br>
