--- a/artists/cusack.html
+++ b/artists/cusack.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Aristodemos</title>
+	<title>HE - Cusack</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -28,7 +28,7 @@
 			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>Born in Cyprus, Tony Kattashis bought his first set of turntables in 1997, while living in London. Greatly affected by the UK underground he moved back to Cyprus 10 years later with a few thousand vinlys, a TR-808 and some vintage synths.  He has since secretly mastered his dance-floor sensibility both in the studio and behind the turntables, gaining reputation as one of the island's finest DJ’s.</p>
+            <p>Tony Kattashis bought his first set of turntables in the mid 90's, while living in London. Greatly affected by the UK underground and the sounds of Detroit and Chicago, he moved back to Cyprus a decade later with several thousand vinlys, a few drum machines and some old synths. He has since secretly mastered his dance-floor sensibility both in the studio and behind the turntables, gaining reputation as one of the island's finest DJ’s.</p>
 
 			<p><a href="https://soundcloud.com/biily" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/pdbillyd" target="_blank">Facebook</a></p>
 <br>
