--- a/artists/elektroniki.html
+++ b/artists/elektroniki.html
@@ -21,26 +21,25 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>elektroniki</h1>
+			<h1>Producer / Performer</h1>
 			<h1>Cyprus</h1>
-			<p>falling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
 			<br>
-			<p>Producer/Performer</p>
-			<h1><a href="https://soundcloud.com/elektroniki" target="_blank">Soundcloud</a></h1>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			</div>
-			<div style="max-height: 600px" class="col-3" id="images">
+            <p>Tfalling folds feeling frequencies for future falling folds feeling fast presents for ever folding.</p>
+
+			<p><a href="https://soundcloud.com/elektroniki" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.instagram.com/elektroniki/" target="_blank">Instagram</a></p>
+<br>
+<br>
 			</div>
 
+			<div style="height: 600px" class="col-3" >
+			</div>
+			
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/elektroniki.jpg" class="slide2">
+				<img src="img/elektroniki.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
