--- a/artists/hades.html
+++ b/artists/hades.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - pan</title>
+	<title>HE - Hades Militia</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -24,26 +24,23 @@
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>pan</h1>
-			<h1>Producer / Photographer</h1>
+			<h1>Hades Militia</h1>
+			<h1>Producer / DJ</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>pan is  the sobriquet of multi-culture/platform artist Panagiotis. He works with visual and or acoustical elements to create distinct objects and texts that frequently cross the lines between parody / reality / auteurship / art / pop. As a musician he performs using a selection of electronic modular sythesizers, drum machines and haptic instruments, guitars, drums and microphones which metamorphose constantly as his sets are often based on autoschediasm. </p>
+            <p>miltiades m has 2 aliases Milton says a dj and excessive digger known for his controversial performances where he's not hesitating to experiment and surprise the crowd  and the recent re invention of hisself Hades militia an upcoming expiramental analog dub techno  producer trying to combine the elements of stomping techno dystopian landscapes and poetry together for a better world to come.</p>
 
-			<p><a href="https://www.instagram.com/therealpannybrown/" target="_blank">Instagram</a></p>
+			<p><a href="https://soundcloud.com/miltiades-1" target="_blank">Soundcloud</a>&nbsp&nbsp&nbsp<a href="https://www.facebook.com/hadesmilitia/" target="_blank">Facebook</a></p>
 <br>
 <br>
 			</div>
 
 			<div style="height: 600px" class="col-3" >
-								<iframe width="100%" src="https://www.youtube.com/embed/FjltqsBsyBI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				<iframe width="100%" src="https://www.youtube.com/embed/UxYKyATKQtI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-
 			</div>
 			
 			<div style="max-height: 600px" class="col-6">
-				<img src="img/pan.jpg" class="sideimg">
-			
+				<img src="img/hades.jpg" class="sideimg">
+				<p align="right">photo: <a href="https://homewards.github.io/artists/pan.html">pan</a></p>
 			</div>
 		</div>
 	</div>
