--- a/artists/shammas.html
+++ b/artists/shammas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - pan</title>
+	<title>HE - Michalis Shammas</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -24,26 +24,28 @@
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>pan</h1>
-			<h1>Producer / Photographer</h1>
+			<h1>Michalis Shammas</h1>
+			<h1>Producer / Intstument Maker</h1>
 			<h1>Cyprus</h1>
 			<br>
-            <p>pan is  the sobriquet of multi-culture/platform artist Panagiotis. He works with visual and or acoustical elements to create distinct objects and texts that frequently cross the lines between parody / reality / auteurship / art / pop. As a musician he performs using a selection of electronic modular sythesizers, drum machines and haptic instruments, guitars, drums and microphones which metamorphose constantly as his sets are often based on autoschediasm. </p>
+            <p>Michalis makes music with stuff that he builds. 
+            He invented the Kyklophonon in 2015, the 8x8 midi controller in 2016, and is currently struggling with building chaotic sequencers for his multisynth set-up.</p>
 
-			<p><a href="https://www.instagram.com/therealpannybrown/" target="_blank">Instagram</a></p>
+			<p><a href="https://soundcloud.com/michalis-sham" target="_blank">Soundcloud</a></p>
 <br>
 <br>
 			</div>
 
 			<div style="height: 600px" class="col-3" >
-								<iframe width="100%" src="https://www.youtube.com/embed/FjltqsBsyBI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				<iframe width="100%" src="https://www.youtube.com/embed/UxYKyATKQtI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-
+				
 			</div>
 			
 			<div style="max-height: 600px" class="col-6">
-				<img src="img/pan.jpg" class="sideimg">
-			
+
+								<iframe src="https://player.vimeo.com/video/142541512?autoplay=1&color=000000&title=0&byline=0&portrait=0" width="600" height="338" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+								<br>
+								<br>
+								<img src="img/shammas.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
