--- a/artists/spivak.html
+++ b/artists/spivak.html
@@ -21,24 +21,30 @@
 		<div class="row">
 
 			<div style="max-height: 600px;" class="col-3">
-			<img src="http://homewards.github.io/images/hew.png" class="logo">
+			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
 			<h1>Spivak</h1>
+			<h1>Producer</h1>
 			<h1>Cyprus</h1>
-			<p>spivak used to make music on the piano. Now she makes music on the computer.</p>
 			<br>
-			<p>Producer</p>
-			<h1><a href="https://soundcloud.com/mspivak" target="_blank">Soundcloud</a></h1>
-			<br>
+            <p>spivak used to make music on the piano. <br>Now she makes music on the computer.</p>
+			<p><a href="https://soundcloud.com/mspivak" target="_blank">Soundcloud</a></p>
+<br>
+<br>
 			</div>
 
 			<div style="max-height: 600px" class="col-3" id="images">
+				<br>
+<br>
+<br>
+<br>
+<br>
 			<iframe width="80%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/262277322&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 			<br>
 </div>
 			<div style="max-height: 600px" class="col-6">
-				<img src="http://homewards.github.io/artists/img/spivak.jpg" class="slide2">
+				<img src="http://homewards.github.io/artists/img/spivak.jpg" class="sideimg">
 			</div>
 		</div>
 	</div>
