artists updates (corrections)

--- a/artists/aportrait.html
+++ b/artists/aportrait.html
@@ -26,7 +26,7 @@
 			<br>
 			<h1>aportrait</h1>
 			<h1>Producer / DJ</h1>
-			<h1>Cyprus</h1>
+			<h1>Turkey</h1>
 			<br>
             <p>Aportrait is the abstract and experimental new project by Istanbul based artist and Memoire Affective label boss Arman Akıncı, who has been DJ’ing over a decade and has an ongoing radio show ‘’Armanqrtachure’’ at Radio Dinamo.</p>
 			<p><a href="https://soundcloud.com/aportrait" target="_blank">Soundcloud</a></p>
