--- a/artists/shammas.html
+++ b/artists/shammas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>HE - Michalis Shammas</title>
+	<title>HE - Michalis Shamm</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="icon" href="http://homewards.github.io/images/he.png">
 <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
@@ -24,7 +24,7 @@
 			<img src="http://homewards.github.io/images/hew.png" class="logo2">
 			<h1><a href="http://homewards.github.io/index.html" target="_self">Back</a></h1>
 			<br>
-			<h1>Michalis Shammas</h1>
+			<h1>Michalis Sham</h1>
 			<h1>Producer / Intstument Maker</h1>
 			<h1>Cyprus</h1>
 			<br>
