--- a/artists/yeliades.html
+++ b/artists/yeliades.html
@@ -28,10 +28,7 @@
 			<h1>Producer</h1>
 			<h1>Cyprus</h1>
 			<br>
-			<p>Yiannis enjoys walking around with a recorder. He then likes to retire back to his cave and search for timbral variations from those everyday sounds.
-At some point he tries to convince his resident machinery to converse with these textures and eventually tries to capture those intense literary and musical moments.<br><br>
-He is enchanted by how electronic music, the music of manipulation, enables variation and change away from established notions of form and structure. A gauze of impure thinking, enabling you to disconnect from yourself and achieve creativity by going beyond yourself.
-<br><br>In exchange for the above, he grudgingly came to terms with the fact that tangled wires are part of his daily life.
+			<p>Yiannis enjoys walking around with a recorder. He then likes to retire back to his cave to achieve timbral variations from those everyday sounds. At some point he tries convince his resident machinery to converse with these textures and eventually tries to capture those literary musical moments.<br><br> He is enchanted by how electronic music, the music of manipulation, enables variation and change away from established notions of form and structure. A gauze of impure thinking that enables you to achieve creativity by disconnecting from and going beyond yourself. <br><br>In exchange for the above, he grudgingly came to terms with the fact that tangled wires are part of his daily life.
 </p>
 			<p><a href="https://soundcloud.com/yiannisel" target="_blank">Soundcloud</a></p>
 
