--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<a href="artists/georges.html" target="_self">Georges D'André</a><br>
 				<a href="artists/hadesmilitia.html" target="_self">Hades Militia</a><br>
 				<a href="artists/yeliades.html" target="_self">isel</a><br>
-				<a href="artists/shammas.html" target="_self">Michalis Shammas</a><br>
+				<a href="artists/shammas.html" target="_self">Michalis Sham</a><br>
 				<a href="artists/oswaldo.html" target="_self">Oswaldo III</a><br>
 				<a href="artists/pan.html" target="_self">pan</a><br>
 				<a href="artists/rawsilver.html" target="_self">RAW SILVER</a><br>
@@ -95,7 +95,7 @@
 				<br>
 								<br>
 				<br>
-				<p> <a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Character</a><br>Style<br>Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">Theme</a><br>Point-Of-View</p>
+				<p> <a href="https://soundcloud.com/honest-electronics/6fiction1-nico-stephou-character">Character</a><br>Style<br>Setting<br><a href="https://soundcloud.com/honest-electronics/6fiction2-sb9-plot">Plot</a><br><a href="https://soundcloud.com/honest-electronics/theme">Theme</a><br><a href="https://soundcloud.com/honest-electronics/pointofview" target="_blank">Point-Of-View</a></p>
         </div>
 
 	</div>
