--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,10 @@
 			<br>
 			<br>
 <p> 
-<a href="https://www.facebook.com/honestelectr/">Facebook</a>
-<br><a href="https://www.soundcloud.com/honest-electonics/">Soundcloud</a>
-<br><a href="https://www.bandcamp.com/honestelectr/">Bandcamp</a>
-<br><a href="https://www.instagram.com/honestelectronics//">Instagram</a>
+<a href="https://www.facebook.com/honestelect/" target="_blank">Facebook</a>
+<br><a href="https://soundcloud.com/honest-electronics"target="_blank">Soundcloud</a>
+<br><a href="https://honestelectronics.bandcamp.com/"target="_blank">Bandcamp</a>
+<br><a href="https://www.instagram.com/honestelectronics/"target="_blank">Instagram</a>
 <br>
 <br>nico.stephou@gmail.com
 </p>
